# todo-mx

./: .gitignore  Justfile  README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_todo.py
core/static/css/: styles.css
core/templates/: _base.html  tasks.html
core/tests/: conftest.py  test_todo_model.py  test_view_tasks.py
todomx/: asgi.py  settings.py  urls.py  wsgi.py
