[project]
name = "todomx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-extensions>=3.2.3",
    "django-template-partials>=24.4",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.17.0",
    "django-extensions>=3.2.3",
    "djlint>=1.36.4",
    "model-bakery>=1.20.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-sugar>=1.0.0",
    "pytest-watcher>=0.4.3",
    "werkzeug>=3.1.3",
]

# pyproject.toml
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "todomx.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.pytest-watcher]
now = true
clear = false
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []
